--- a/notebooks/3DCellSegmentation.ipynb
+++ b/notebooks/3DCellSegmentation.ipynb
@@ -81,7 +81,7 @@
       "This folder npz is not empty, \n",
       "If you want to save file here, turn overright to True\n",
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpr2_xg3g5'.\n",
+      "*** Profile stats marshalled to file '/tmp/tmpzvt47ao_'.\n",
       "Embedding SnakeViz in this document...\n"
      ]
     },
@@ -89,8 +89,8 @@
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-551fec22-523a-11ee-b456-7181333d19e3' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-551fec22-523a-11ee-b456-7181333d19e3\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpr2_xg3g5\")</script>\n"
+       "<iframe id='snakeviz-9636e7ca-52ed-11ee-acdf-c3831a6cee6d' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-9636e7ca-52ed-11ee-acdf-c3831a6cee6d\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpzvt47ao_\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpj7dzagbt'.\n",
+      "*** Profile stats marshalled to file '/tmp/tmpistsrp3r'.\n",
       "Embedding SnakeViz in this document...\n"
      ]
     },
@@ -126,8 +126,8 @@
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-bc2746ae-523a-11ee-b456-7181333d19e3' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-bc2746ae-523a-11ee-b456-7181333d19e3\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpj7dzagbt\")</script>\n"
+       "<iframe id='snakeviz-fd18ceea-52ed-11ee-acdf-c3831a6cee6d' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-fd18ceea-52ed-11ee-acdf-c3831a6cee6d\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpistsrp3r\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "f839cc1c",
    "metadata": {
     "scrolled": false
@@ -261,7 +261,7 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpua0jtvtq'.\n",
+      "*** Profile stats marshalled to file '/tmp/tmp3g3njwq4'.\n",
       "Embedding SnakeViz in this document...\n"
      ]
     },
@@ -269,8 +269,8 @@
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-95b0418a-5242-11ee-b456-7181333d19e3' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-95b0418a-5242-11ee-b456-7181333d19e3\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpua0jtvtq\")</script>\n"
+       "<iframe id='snakeviz-86edb7ce-52ef-11ee-8a1b-339c2a3fbd34' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-86edb7ce-52ef-11ee-8a1b-339c2a3fbd34\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmp3g3njwq4\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
