Simple cell seg

--- a/notebooks/3DCellSegmentation.ipynb
+++ b/notebooks/3DCellSegmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e1d9bbca",
    "metadata": {},
    "outputs": [],
@@ -46,12 +46,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"../data/ctrl/\"\n",
-    "seg_filename = \"ResultofC1-Composite_cp_masks-edited.tif\"\n",
+    "path = \"/mnt/sda1/For Shopie/\"\n",
+    "seg_filename = \"id_cells_image_stack.tif\"\n",
+    "pixel_size = dict(x_size = 1.,\n",
+    "                  y_size = 1.,\n",
+    "                  z_size = 1.,)\n",
     "\n",
-    "pixel_size = dict(x_size = 0.183,\n",
-    "                  y_size = 0.183,\n",
-    "                  z_size = 0.5,)"
+    "# pixel_size = dict(x_size = 0.183,\n",
+    "#                   y_size = 0.183,\n",
+    "#                   z_size = 0.5,)"
    ]
   },
   {
@@ -68,38 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "177c4f1b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This folder npz is not empty, \n",
-      "If you want to save file here, turn overright to True\n",
-      " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpzvt47ao_'.\n",
-      "Embedding SnakeViz in this document...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<iframe id='snakeviz-9636e7ca-52ed-11ee-acdf-c3831a6cee6d' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-9636e7ca-52ed-11ee-acdf-c3831a6cee6d\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpzvt47ao_\")</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%snakeviz\n",
     "start_time = time.time()\n",
@@ -109,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e6c9569e",
    "metadata": {},
    "outputs": [
@@ -118,16 +95,17 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpistsrp3r'.\n",
-      "Embedding SnakeViz in this document...\n"
+      "*** Profile stats marshalled to file '/tmp/tmpxlkvy2l2'.\n",
+      "Embedding SnakeViz in this document...\n",
+      "<function display at 0x7f4d1404c2c0>\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-fd18ceea-52ed-11ee-acdf-c3831a6cee6d' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-fd18ceea-52ed-11ee-acdf-c3831a6cee6d\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpistsrp3r\")</script>\n"
+       "<iframe id='snakeviz-48d1d754-9453-11ee-80e7-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-48d1d754-9453-11ee-80e7-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpxlkvy2l2\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -147,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "9f3b1292",
    "metadata": {
     "scrolled": false
@@ -158,16 +136,17 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpcp95777u'.\n",
-      "Embedding SnakeViz in this document...\n"
+      "*** Profile stats marshalled to file '/tmp/tmpnx1b__zg'.\n",
+      "Embedding SnakeViz in this document...\n",
+      "<function display at 0x7f4d1404c2c0>\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-9bffe0ca-523f-11ee-b456-7181333d19e3' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-9bffe0ca-523f-11ee-b456-7181333d19e3\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpcp95777u\")</script>\n"
+       "<iframe id='snakeviz-ee125904-948b-11ee-80e7-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-ee125904-948b-11ee-80e7-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpnx1b__zg\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -187,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "85ef8827",
    "metadata": {
     "scrolled": false
@@ -198,16 +177,17 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpm8d9xlis'.\n",
-      "Embedding SnakeViz in this document...\n"
+      "*** Profile stats marshalled to file '/tmp/tmpys9bmrif'.\n",
+      "Embedding SnakeViz in this document...\n",
+      "<function display at 0x7f4d1404c2c0>\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-4567519c-5241-11ee-b456-7181333d19e3' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-4567519c-5241-11ee-b456-7181333d19e3\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpm8d9xlis\")</script>\n"
+       "<iframe id='snakeviz-ece547de-94c3-11ee-80e7-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-ece547de-94c3-11ee-80e7-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpys9bmrif\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -250,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "f839cc1c",
    "metadata": {
     "scrolled": false
@@ -261,16 +241,17 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmp3g3njwq4'.\n",
-      "Embedding SnakeViz in this document...\n"
+      "*** Profile stats marshalled to file '/tmp/tmpbplsmwaf'.\n",
+      "Embedding SnakeViz in this document...\n",
+      "<function display at 0x7f4d1404c2c0>\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-86edb7ce-52ef-11ee-8a1b-339c2a3fbd34' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-86edb7ce-52ef-11ee-8a1b-339c2a3fbd34\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmp3g3njwq4\")</script>\n"
+       "<iframe id='snakeviz-b69d90d4-950c-11ee-80e7-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-b69d90d4-950c-11ee-80e7-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpbplsmwaf\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -453,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
