--- a/notebooks/3DCellSegmentation.ipynb
+++ b/notebooks/3DCellSegmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "e1d9bbca",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/mnt/sda1/For Shopie/\"\n",
+    "path = \"/mnt/sda1/Sophie/test_img/\"\n",
     "seg_filename = \"id_cells_image_stack.tif\"\n",
     "pixel_size = dict(x_size = 1.,\n",
     "                  y_size = 1.,\n",
@@ -64,48 +64,161 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "image = io.imread(os.path.join(path, seg_filename))\n",
+    "image = io.imread(os.path.join(path, seg_filename))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f2db45b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5408cd03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "seg = Segmentation(image, pixel_size, path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "177c4f1b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "%%snakeviz\n",
-    "start_time = time.time()\n",
-    "seg.perform_prerequisite()\n",
-    "# print(\"--- %s seconds ---\" % (time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e6c9569e",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/tmp/tmpxlkvy2l2'.\n",
+      "*** Profile stats marshalled to file '/tmp/tmp0a4nf27v'.\n",
       "Embedding SnakeViz in this document...\n",
-      "<function display at 0x7f4d1404c2c0>\n"
+      "<function display at 0x7b12a8d3bba0>\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe id='snakeviz-48d1d754-9453-11ee-80e7-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
-       "<script>document.getElementById(\"snakeviz-48d1d754-9453-11ee-80e7-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpxlkvy2l2\")</script>\n"
+       "<iframe id='snakeviz-f0e0e060-0876-11ef-984b-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-f0e0e060-0876-11ef-984b-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmp0a4nf27v\")</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%snakeviz\n",
+    "# start_time = time.time()\n",
+    "# seg.perform_prerequisite(save_mesh=True)\n",
+    "# # print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5648860a",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/u2175049/anaconda3/lib/python3.11/site-packages/CellSeg/analysis.py:80: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  cell_plane_df = pd.concat([cell_plane_df, pd.DataFrame(cell_plane_out,  columns=cell_plane_columns)], ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file '/tmp/tmperhg9sex'.\n",
+      "Embedding SnakeViz in this document...\n",
+      "<function display at 0x7943cea97ba0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe id='snakeviz-8281cc92-2955-11ef-9a9f-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-8281cc92-2955-11ef-9a9f-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmperhg9sex\")</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%snakeviz\n",
+    "cell_analysis(seg, parallelized=True, degree_convert=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda62a86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ab22139",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b75df506",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e6c9569e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file '/tmp/tmpmslnznq5'.\n",
+      "Embedding SnakeViz in this document...\n",
+      "<function display at 0x7b12a8d3bba0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe id='snakeviz-d56bfd50-0877-11ef-984b-7486e223398f' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-d56bfd50-0877-11ef-984b-7486e223398f\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/%2Ftmp%2Ftmpmslnznq5\")</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
