Rename CellSeg into CellMet

--- a/notebooks/0-Paper-3DCellSegmentation-TimeExecution.ipynb
+++ b/notebooks/0-Paper-3DCellSegmentation-TimeExecution.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from CellSeg.segmentation import Segmentation\n",
-    "from CellSeg.analysis import cell_analysis, edge_analysis, face_analysis\n",
+    "from CellMet.segmentation import Segmentation\n",
+    "from CellMet.analysis import cell_analysis, edge_analysis, face_analysis\n",
     "%load_ext snakeviz"
    ]
   },
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/home/u2175049/Documents/Code/CellSeg/notebooks/\"\n",
+    "path = \"/home/u2175049/Documents/Code/CellMet/notebooks/\"\n",
     "seg_filename = \"artificial_tissue_70cells_1000px_0.tif\"\n",
     "pixel_size = dict(x_size = 0.21,\n",
     "                  y_size = 0.21,\n",
