--- a/notebooks/0-Paper-generate_artificial_image.ipynb
+++ b/notebooks/0-Paper-generate_artificial_image.ipynb
@@ -13,7 +13,7 @@
     "from scipy.spatial import Voronoi\n",
     "from skimage.draw import line_aa, polygon\n",
     "\n",
-    "from CellSeg.io import write_tiff\n",
+    "from CellMet.io import write_tiff\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
