--- a/notebooks/1-CellAnalysisOnly.ipynb
+++ b/notebooks/1-CellAnalysisOnly.ipynb
@@ -23,8 +23,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from CellSeg.segmentation import Segmentation\n",
-    "from CellSeg.analysis import cell_analysis"
+    "from CellMet.segmentation import Segmentation\n",
+    "from CellMet.analysis import cell_analysis"
    ]
   },
   {
